# mathy

./: pyproject.toml
mathy/: __main__.py  autoencoder_experiment.py  autoencoder_mnist.py  command.py  datagen.py  model_trainer.py
mathy/model/: autoencoder.py
mathy/synthetic/: generator.py  numbers.py
mathy/synthetic/numbers/: __init__.py  numbers.py
mathy/tokenizer/: __init__.py  base.py
tests/: test_tokenizer.py
